--- a/index.html
+++ b/index.html
@@ -1,15 +1,15 @@
 <!DOCTYPE html>
 <html lang="en">
 	<head>
-	  	<meta charset="utf-8">
-	  	<title>Whatsapp Web</title>
-	  	<meta http-equiv="X-UA-Compatible" content="IE=edge">
-	  	<meta name="viewport" content="width=device-width, initial-scale=1">
-	  	<link rel="shortcut icon" href="image/favicon.png" type="image/png">
-	  	<link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Open+Sans:400,600%7CRoboto:300,400,500" media="all">
-	  	<link rel="stylesheet" type="text/css" href="css/bootstrap.min.css">
-	  	<link rel="stylesheet" href="css/font-awesome.css">
-	  	<link rel="stylesheet" href="css/icomoon.css">
+		<meta charset="utf-8">
+		<title>Whatsapp Web</title>
+		<meta http-equiv="X-UA-Compatible" content="IE=edge">
+		<meta name="viewport" content="width=device-width, initial-scale=1">
+		<link rel="shortcut icon" href="image/favicon.png" type="image/png">
+		<link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Open+Sans:400,600%7CRoboto:300,400,500" media="all">
+		<link rel="stylesheet" type="text/css" href="css/bootstrap.min.css">
+		<link rel="stylesheet" href="css/font-awesome.css">
+		<link rel="stylesheet" href="css/icomoon.css">
 		<link rel="stylesheet" href="css/utilitiesWZ.css">
 		<link rel="stylesheet" href="css/main.css">
 		<link rel="stylesheet" href="css/queries.css">
@@ -40,9 +40,8 @@
 								</div>
 							</form>
 						</div>
-						<div class="w-contacts">
-							<div class="scrollbar" id="style-4">
-								<div class="contact">
+						<div id=contact-list class="w-contacts scrollbar">
+							<div id="contact" class="contact">
 								<div class="contact-info">
 									<div class="avatar laboratoria"></div>
 									<h5>Laboratoria Peru</h5>
@@ -50,7 +49,7 @@
 									<span class="date">14:25</span>
 								</div>
 							</div>
-							<div class="contact">
+							<div id="contact" class="contact">
 								<div class="contact-info">
 									<div class="avatar raymi"></div>
 									<h5>Raymi Saldomando</h5>
@@ -58,7 +57,7 @@
 									<span class="date">11:25</span>
 								</div>
 							</div>
-							<div class="contact">
+							<div id="contact" class="contact">
 								<div class="contact-info">
 									<div class="avatar mariana"></div>
 									<h5>Mariana Costa</h5>
@@ -66,7 +65,7 @@
 									<span class="date">9:25</span>
 								</div>
 							</div>
-							<div class="contact">
+							<div id="contact" class="contact">
 								<div class="contact-info">
 									<div class="avatar ana"></div>
 									<h5>Ana Maria Martinez Franklin</h5>
@@ -74,7 +73,7 @@
 									<span class="date">ayer</span>
 								</div>
 							</div>
-							<div class="contact">
+							<div id="contact" class="contact">
 								<div class="contact-info">
 									<div class="avatar rodulfo"></div>
 									<h5>Rodulfo Prieto</h5>
@@ -82,7 +81,7 @@
 									<span class="date">mrtes</span>
 								</div>
 							</div>
-							<div class="contact">
+							<div id="contact" class="contact">
 								<div class="contact-info">
 									<div class="avatar andrea"></div>
 									<h5>Andrea Lamas</h5>
@@ -90,7 +89,7 @@
 									<span class="date">lunes</span>
 								</div>
 							</div>
-							<div class="contact">
+							<div id="contact" class="contact">
 								<div class="contact-info">
 									<div class="avatar maria"></div>
 									<h5>Maria Paula Rivarola</h5>
@@ -98,7 +97,7 @@
 									<span class="date">13/01/2016</span>
 								</div>
 							</div>
-							<div class="contact">
+							<div id="contact" class="contact">
 								<div class="contact-info">
 									<div class="avatar katy"></div>
 									<h5>Kathy Sanchez</h5>
@@ -106,15 +105,14 @@
 									<span class="date">11/01/2016</span>
 								</div>
 							</div>
-							<div class="contact">
+							<div id="contact" class="contact">
 								<div class="contact-info">
 									<div class="avatar aldo"></div>
-									<h5>Also Alfaro</h5>
+									<h5>Aldo Alfaro</h5>
 									<p>Vao a comer</p>
 									<span class="date">03/01/2016</span>
 								</div>
 							</div>
-    						</div>
 						</div>
 					</div>
 					<div class="col-md-8 pd-l">
@@ -128,67 +126,67 @@
 								<a href="#"><i class="icon-attachment"></i></a>
 								<a href="#"><i class="icon-dots-three-vertical"></i></a>
 							</div>
-							
-						</div> 
-						<div class="scrollbar" id="style-4">
-							<div class="chat-panel">
-								<div class="new message">
-									<h5>Andrea Lamas</h5>
-									<p>Chicos, han visto el nuevo corte de Aldo?</p>
-									<span class="message-date">11:12</span>
-								</div>
-								<div class="new message">
-									<h5>Mariana Costa</h5>
-									<p>Finalmente se corto?</p>
-									<span class="message-date">11:13</span>
-								</div>
-								<div class="new message">
-									<h5>Maria Paula Rivarola</h5>
-									<p>jajaja Sii finalmente se corto!</p>
-									<span class="message-date">11:13</span>
-								</div>
-								<div class="send message">
-									<p>Antes parecia mufasa jajaja</p>
-									<span class="message-date">11:14</span>
-								</div>
-								<div class="send message">
-									<p>Ahora si esta decente</p>
-									<span class="message-date">11:18</span>
-								</div>
-								<div class="new message">
-									<h5>Andrea Lamas</h5>
-									<p>Por qué se lo habra cortado?</p>
-									<span class="message-date">11:20</span>
-								</div>
-								<div class="new message">
-									<h5>Aldo Alfaro</h5>
-									<p>Ya ya ya, hacia mucho calor que más</p>
-									<span class="message-date">11:25</span>
-								</div>
-								<div class="new message">
-									<h5>Andrea Lamas</h5>
-									<p>Está siguiendo los pasos de Juan Diego!</p>
-									<span class="message-date">11:30</span>
-								</div>
-								<div class="new message">
-									<h5>Maria Paula Rivarola</h5>
-									<p>Nunca, Juan Diego es único!</p>
-									<span class="message-date">11:31</span>
-								</div>
-							</div>	
+						</div>
+						<div id="chat-panel" class="chat-panel scrollbar">
+							<div class="new message">
+								<h5>Andrea Lamas</h5>
+								<p>Chicos, han visto el nuevo corte de Aldo?</p>
+								<span class="message-date">11:12</span>
+							</div>
+							<div class="new message">
+								<h5>Mariana Costa</h5>
+								<p>Finalmente se corto?</p>
+								<span class="message-date">11:13</span>
+							</div>
+							<div class="new message">
+								<h5>Maria Paula Rivarola</h5>
+								<p>jajaja Sii finalmente se corto!</p>
+								<span class="message-date">11:13</span>
+							</div>
+							<div class="send message">
+								<p>Antes parecia mufasa jajaja</p>
+								<span class="message-date">11:14</span>
+							</div>
+							<div class="send message">
+								<p>Ahora si esta decente</p>
+								<span class="message-date">11:18</span>
+							</div>
+							<div class="new message">
+								<h5>Andrea Lamas</h5>
+								<p>Por qué se lo habra cortado?</p>
+								<span class="message-date">11:20</span>
+							</div>
+							<div class="new message">
+								<h5>Aldo Alfaro</h5>
+								<p>Ya ya ya, hacia mucho calor que más</p>
+								<span class="message-date">11:25</span>
+							</div>
+							<div class="new message">
+								<h5>Andrea Lamas</h5>
+								<p>Está siguiendo los pasos de Juan Diego!</p>
+								<span class="message-date">11:30</span>
+							</div>
+							<div class="new message">
+								<h5>Maria Paula Rivarola</h5>
+								<p>Nunca, Juan Diego es único!</p>
+								<span class="message-date">11:31</span>
+							</div>
 						</div>
 						<div class="form icon-form">
 							<form class="input-form text-right">
-								<div class="form input-message">
+								<div  class="form input-message">
 									<a href="#"><i class="icon-insert_emoticon"></i></a>
-									<input class="form-control" placeholder="Escribe tu mensaje aqui"></input>
+									<input id="input-messaje" class="form-control" placeholder="Escribe tu mensaje aqui"></input>
 									<a href="#"><i class="icon-mic"></i></a>
-								</div>							
+								</div>
 							</form>
 						</div>
 					</div>
 				</div>
 			</div>
 		</section>
+		<script src="https://code.jquery.com/jquery-2.2.2.js"></script>
+		<script src="js/bootstrap.min.js"></script>
+		<script src="js/main.js"></script>
 	</body>
 </html>
