--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
 							<form>
 								<div class="form-control">
 									<i class="icon-search"></i>
-									<input class="search" placeholder=" Buscar o empezar un chat nuevo"></input>
+									<input id="search" class="search" placeholder=" Buscar o empezar un chat nuevo"></input>
 								</div>
 							</form>
 						</div>
@@ -176,7 +176,7 @@
 							<form class="input-form text-right">
 								<div  class="form input-message">
 									<a href="#"><i class="icon-insert_emoticon"></i></a>
-									<input id="input-messaje" class="form-control" placeholder="Escribe tu mensaje aqui"></input>
+									<input id="input-messaje" class="form-control" placeholder="Escribe tu mensaje aqui" value=""></input>
 									<a href="#"><i class="icon-mic"></i></a>
 								</div>
 							</form>
