--- a/index.html
+++ b/index.html
@@ -176,7 +176,7 @@
 							<form class="input-form text-right">
 								<div  class="form input-message">
 									<a href="#"><i class="icon-insert_emoticon"></i></a>
-									<input id="input-messaje" class="form-control" placeholder="Escribe tu mensaje aqui" value=""></input>
+									<input id="input-message" class="form-control" placeholder="Escribe tu mensaje aqui" value=""></input>
 									<a href="#"><i class="icon-mic"></i></a>
 								</div>
 							</form>
