--- a/index.html
+++ b/index.html
@@ -8,9 +8,7 @@
 		<link rel="shortcut icon" href="image/favicon.png" type="image/png">
 		<link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Open+Sans:400,600%7CRoboto:300,400,500" media="all">
 		<link rel="stylesheet" type="text/css" href="css/bootstrap.min.css">
-		<link rel="stylesheet" href="css/font-awesome.css">
 		<link rel="stylesheet" href="css/icomoon.css">
-		<link rel="stylesheet" href="css/utilitiesWZ.css">
 		<link rel="stylesheet" href="css/main.css">
 		<link rel="stylesheet" href="css/queries.css">
 	</head>
@@ -128,21 +126,7 @@
 							</div>
 						</div>
 						<div id="chat-panel" class="chat-panel scrollbar">
-							<div class="new message">
-								<h5>Andrea Lamas</h5>
-								<p>Chicos, han visto el nuevo corte de Aldo?</p>
-								<span class="message-date">11:12</span>
-							</div>
-							<div class="new message">
-								<h5>Mariana Costa</h5>
-								<p>Finalmente se corto?</p>
-								<span class="message-date">11:13</span>
-							</div>
-							<div class="new message">
-								<h5>Maria Paula Rivarola</h5>
-								<p>jajaja Sii finalmente se corto!</p>
-								<span class="message-date">11:13</span>
-							</div>
+							
 							<div class="send message">
 								<p>Antes parecia mufasa jajaja</p>
 								<span class="message-date">11:14</span>
@@ -151,32 +135,13 @@
 								<p>Ahora si esta decente</p>
 								<span class="message-date">11:18</span>
 							</div>
-							<div class="new message">
-								<h5>Andrea Lamas</h5>
-								<p>Por qué se lo habra cortado?</p>
-								<span class="message-date">11:20</span>
-							</div>
-							<div class="new message">
-								<h5>Aldo Alfaro</h5>
-								<p>Ya ya ya, hacia mucho calor que más</p>
-								<span class="message-date">11:25</span>
-							</div>
-							<div class="new message">
-								<h5>Andrea Lamas</h5>
-								<p>Está siguiendo los pasos de Juan Diego!</p>
-								<span class="message-date">11:30</span>
-							</div>
-							<div class="new message">
-								<h5>Maria Paula Rivarola</h5>
-								<p>Nunca, Juan Diego es único!</p>
-								<span class="message-date">11:31</span>
-							</div>
+							
 						</div>
 						<div class="form icon-form">
 							<form class="input-form text-right">
 								<div  class="form input-message">
 									<a href="#"><i class="icon-insert_emoticon"></i></a>
-									<input id="input-message" class="form-control" placeholder="Escribe tu mensaje aqui" value=""></input>
+									<input id="input-message" class="form-control" placeholder="Escribe tu mensaje aqui"></input>
 									<a href="#"><i class="icon-mic"></i></a>
 								</div>
 							</form>
@@ -185,6 +150,7 @@
 				</div>
 			</div>
 		</section>
+		<script src="js/jquery.js"></script>
 		<script src="https://code.jquery.com/jquery-2.2.2.js"></script>
 		<script src="js/bootstrap.min.js"></script>
 		<script src="js/main.js"></script>
