--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
 							<form>
 								<div class="form-control">
 									<i class="icon-search"></i>
-									<input id="search" class="search" placeholder=" Buscar o empezar un chat nuevo"></input>
+									<input id="search" class="search" placeholder=" Buscar o empezar un chat nuevo" type="text"></input>
 								</div>
 							</form>
 						</div>
