--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
 							<form>
 								<div class="form-control">
 									<i class="icon-search"></i>
-									<input id="search" class="search" placeholder=" Buscar o empezar un chat nuevo" type="text"></input>
+									<input id="search" class=" search input-search" placeholder=" Buscar o empezar un chat nuevo" type="text"></input>
 								</div>
 							</form>
 						</div>
@@ -141,7 +141,7 @@
 							<form class="input-form text-right">
 								<div  class="form input-message">
 									<a href="#"><i class="icon-insert_emoticon"></i></a>
-									<input id="input-message" class="form-control" placeholder="Escribe tu mensaje aqui"></input>
+									<input id="input-message" type="text" class="form-control" placeholder="Escribe tu mensaje aqui"></input>
 									<a href="#"><i class="icon-mic"></i></a>
 								</div>
 							</form>
