--- a/index.html
+++ b/index.html
@@ -38,80 +38,80 @@
 								</div>
 							</form>
 						</div>
-						<div id=contact-list class="w-contacts scrollbar">
-							<div id="contact" class="contact">
+						<ul id=contact-list class="w-contacts scrollbar" data-search-on-list="contact-list">
+							<li id="contact" class="contact" data-search-on-list="contact">
 								<div class="contact-info">
 									<div class="avatar laboratoria"></div>
 									<h5>Laboratoria Peru</h5>
 									<p>Aldo: dale dale</p>
 									<span class="date">14:25</span>
 								</div>
-							</div>
-							<div id="contact" class="contact">
+							</li>
+							<li id="contact" class="contact" data-search-on-list="contact">
 								<div class="contact-info">
 									<div class="avatar raymi"></div>
 									<h5>Raymi Saldomando</h5>
 									<p>La clase va bien!</p>
 									<span class="date">11:25</span>
 								</div>
-							</div>
-							<div id="contact" class="contact">
+							</li>
+							<li id="contact" class="contact" data-search-on-list="contact">
 								<div class="contact-info">
 									<div class="avatar mariana"></div>
 									<h5>Mariana Costa</h5>
 									<p>El panel de Speakers esta buenazo</p>
 									<span class="date">9:25</span>
 								</div>
-							</div>
-							<div id="contact" class="contact">
+							</li>
+							<li id="contact" class="contact" data-search-on-list="contact">
 								<div class="contact-info">
 									<div class="avatar ana"></div>
 									<h5>Ana Maria Martinez Franklin</h5>
 									<p>Pues dale chamo</p>
 									<span class="date">ayer</span>
 								</div>
-							</div>
-							<div id="contact" class="contact">
+							</li>
+							<li id="contact" class="contact" data-search-on-list="contact">
 								<div class="contact-info">
 									<div class="avatar rodulfo"></div>
 									<h5>Rodulfo Prieto</h5>
 									<p>Como van las chicas?</p>
 									<span class="date">mrtes</span>
 								</div>
-							</div>
-							<div id="contact" class="contact">
+							</li>
+							<li id="contact" class="contact" data-search-on-list="contact">
 								<div class="contact-info">
 									<div class="avatar andrea"></div>
 									<h5>Andrea Lamas</h5>
 									<p>Hoy me toca clases de canto yee!</p>
 									<span class="date">lunes</span>
 								</div>
-							</div>
-							<div id="contact" class="contact">
+							</li>
+							<li id="contact" class="contact" data-search-on-list="contact">
 								<div class="contact-info">
 									<div class="avatar maria"></div>
 									<h5>Maria Paula Rivarola</h5>
 									<p>Wuju! Esto me encanta! en verdad!</p>
 									<span class="date">13/01/2016</span>
 								</div>
-							</div>
-							<div id="contact" class="contact">
+							</li>
+							<li id="contact" class="contact" data-search-on-list="contact">
 								<div class="contact-info">
 									<div class="avatar katy"></div>
 									<h5>Kathy Sanchez</h5>
 									<p>No te preocupes, tengo el salon bajo control</p>
 									<span class="date">11/01/2016</span>
 								</div>
-							</div>
-							<div id="contact" class="contact">
+							</li>
+							<li id="contact" class="contact" data-search-on-list="contact">
 								<div class="contact-info">
 									<div class="avatar aldo"></div>
 									<h5>Aldo Alfaro</h5>
 									<p>Vao a comer</p>
 									<span class="date">03/01/2016</span>
 								</div>
-							</div>
-						</div>
+							</li>
+						</ul>
 					</div>
 					<div class="col-md-8 pd-l">
 						<div class="contact bck-lightgray">
